--- a/TMNT/movie.css
+++ b/TMNT/movie.css
@@ -1,5 +1,8 @@
 /*黎堃翔 14331127
-This file is the apperance of a movie review*/
+This file is the apperance of a movie review
+我这边一方面尽量按照老师的要求在做另一方面因为用的是chrome而且大多数人用的也是这个所以我还是在chrome的视觉效果上进行的修改。
+希望同学能理解。
+*/
 body{
 	background-image: url(images/background.png);
 	background-repeat: repeat;
