--- a/TMNT/movie.css
+++ b/TMNT/movie.css
@@ -108,6 +108,7 @@ dd{
 }
 #introduction dt{
 	font-weight: bold;
+	margin-top: 1em;
 }
 
 #pages{
@@ -118,11 +119,9 @@ dd{
 	background-color: #A2B964;
 	margin-bottom: 0px;
 	padding: 5px;
-	/*clear: left;*/
 }
 #pages p{
 	padding: 0;
-	/*margin: 0;*/
 	margin-top: -2px;
 	margin-bottom: 0;
 }
