--- a/Ring/14331127_likunxiang/ring.css
+++ b/Ring/14331127_likunxiang/ring.css
@@ -1,4 +1,5 @@
 /*先将预设格式准备好*/
+/*注：info中的字体我未完全按照原图，因为数据不同。现在这里的message只有3，我认为不需要放大更符合实际。希望同学理解O(∩_∩)O*/
 body, ul, div, span, img, p{
 	padding: 0;
 	margin: 0;
@@ -21,14 +22,16 @@ body, ul, div, span, img, p{
 	position: absolute;
 	top: 110px;
 	left: 140px;
-	-webkit-transition: all 0.3s;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 /*消去无作用的小圆点并设置内在格式*/
 li {
 	list-style-type: none;
 	display:inline-block;
 	vertical-align: center;
-	-webkit-transition: all 0.3s;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 img {
 	margin-right: 3px;
@@ -67,7 +70,8 @@ div #control-ring-container {
 	position: absolute;
 	top: 0px;
 	left: 160px;
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 .history.button {
 	background-image: url(assets/images/history.png);
@@ -76,7 +80,8 @@ div #control-ring-container {
 	position: absolute;
 	top: 0px;
 	left: 160px;
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 .message.button {
 	background-image: url(assets/images/message.png);
@@ -85,7 +90,8 @@ div #control-ring-container {
 	position: absolute;
 	top: 0px;
 	left: 160px;
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 .unread {
 	display: block;
@@ -108,7 +114,8 @@ div #control-ring-container {
 	position: absolute;
 	top: 0px;
 	left: 160px;
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 .sign.button {
 	background-image: url(assets/images/signin.png);
@@ -117,7 +124,8 @@ div #control-ring-container {
 	position: absolute;
 	top: 0px;
 	left: 160px;
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
 }
 .apb {
 	width: 33px;
@@ -133,7 +141,8 @@ div #control-ring-container {
 	position: absolute;
 	left: 125px;
 	bottom: 125px;  /*先通过计算将apb定位，防止接下来#button变化时apb移位*/
-	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease-in-out 0.1s;
+	-webkit-transition: all 0.3s ease-in-out 0.1s;
 }
 #button {
 	position: absolute;
